feat: category 생성/조회 API 개발
