# src/dto/category/CreateSecondCategoryDto.ts
@@ -1,0 +1,4 @@
+export interface CreateSecondCategoryDto {
+  firstCategoryId: number;
+  secondCategory: string;
+}
