# src/routes/routes.ts
@@ -12,6 +12,175 @@ import * as express from 'express';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
+    "FirstCategory": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "name": {"dataType":"string","required":true},
+            "secondCategories": {"dataType":"array","array":{"dataType":"refObject","ref":"SecondCategory"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "BootcampBrand": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "name": {"dataType":"string","required":true},
+            "eduCompany": {"ref":"EduCompany","required":true},
+            "bootcamps": {"dataType":"array","array":{"dataType":"refObject","ref":"Bootcamp"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "EduCompany": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "name": {"dataType":"string","required":true},
+            "bootcampBrands": {"dataType":"array","array":{"dataType":"refObject","ref":"BootcampBrand"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Bootcamp": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "name": {"dataType":"string","required":true},
+            "bootcampBrand": {"ref":"BootcampBrand","required":true},
+            "bootcampSecondCategoryMaps": {"dataType":"array","array":{"dataType":"refObject","ref":"BootcampSecondCategoryMap"},"required":true},
+            "bootcampDetails": {"dataType":"array","array":{"dataType":"refObject","ref":"BootcampDetail"},"required":true},
+            "reviews": {"dataType":"array","array":{"dataType":"refObject","ref":"Review"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "BootcampSecondCategoryMap": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "bootcamp": {"ref":"Bootcamp","required":true},
+            "secondCategory": {"ref":"SecondCategory","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "IsOnline": {
+        "dataType": "refEnum",
+        "enums": [0,1,2],
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Status": {
+        "dataType": "refEnum",
+        "enums": [0,1,2],
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "BootcampDetail": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "productTitle": {"dataType":"string","required":true},
+            "description": {"dataType":"string","required":true},
+            "originUrl": {"dataType":"string","required":true},
+            "regStartDate": {"dataType":"datetime","required":true},
+            "regEndDate": {"dataType":"datetime","required":true},
+            "studyTime": {"dataType":"string","required":true},
+            "nDaysAWeek": {"dataType":"double","required":true},
+            "quota": {"dataType":"double","required":true},
+            "isOnline": {"ref":"IsOnline","required":true},
+            "location": {"dataType":"string","required":true},
+            "tuition": {"dataType":"double","required":true},
+            "contact": {"dataType":"string","required":true},
+            "views": {"dataType":"double","required":true},
+            "thumbnailUrl": {"dataType":"string","required":true},
+            "ciUrl": {"dataType":"string","required":true},
+            "content": {"dataType":"string","required":true},
+            "curriculumn": {"dataType":"string","required":true},
+            "nth": {"dataType":"double","required":true},
+            "status": {"ref":"Status","required":true},
+            "startDate": {"dataType":"datetime","required":true},
+            "endDate": {"dataType":"datetime","required":true},
+            "period": {"dataType":"double","required":true},
+            "bootcamp": {"ref":"Bootcamp","required":true},
+            "bootcampDetailSkillMaps": {"dataType":"array","array":{"dataType":"refObject","ref":"BootcampDetailSkillMap"},"required":true},
+            "bootcampDetailTagMaps": {"dataType":"array","array":{"dataType":"refObject","ref":"BootcampDetailTagMap"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "BootcampDetailSkillMap": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "bootcampDetail": {"ref":"BootcampDetail","required":true},
+            "skill": {"ref":"Skill","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Skill": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "skill": {"dataType":"string","required":true},
+            "bootcampDetailSkillMaps": {"dataType":"array","array":{"dataType":"refObject","ref":"BootcampDetailSkillMap"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "BootcampDetailTagMap": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "bootcampDetail": {"ref":"BootcampDetail","required":true},
+            "tags": {"ref":"Tag","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Tag": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "tag": {"dataType":"string","required":true},
+            "bootcampDetailTagMaps": {"dataType":"array","array":{"dataType":"refObject","ref":"BootcampDetailTagMap"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "Review": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "origin_url": {"dataType":"string","required":true},
+            "bootcamp": {"ref":"Bootcamp","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "SecondCategory": {
+        "dataType": "refObject",
+        "properties": {
+            "id": {"dataType":"double","required":true},
+            "name": {"dataType":"string","required":true},
+            "firstCategory": {"ref":"FirstCategory","required":true},
+            "bootcampSecondCategoryMaps": {"dataType":"array","array":{"dataType":"refObject","ref":"BootcampSecondCategoryMap"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "ResponsePayload_FirstCategory-Array_": {
+        "dataType": "refObject",
+        "properties": {
+            "statusCode": {"dataType":"double","required":true},
+            "success": {"dataType":"boolean","required":true},
+            "message": {"dataType":"string","required":true},
+            "data": {"dataType":"array","array":{"dataType":"refObject","ref":"FirstCategory"}},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "ResponsePayload_null_": {
         "dataType": "refObject",
         "properties": {
@@ -23,7 +192,7 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "CategoryCreateDto": {
+    "CreateCategoryDto": {
         "dataType": "refObject",
         "properties": {
             "firstCategory": {"dataType":"string","required":true},
@@ -51,6 +220,15 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "CreateSecondCategoryDto": {
+        "dataType": "refObject",
+        "properties": {
+            "firstCategoryId": {"dataType":"double","required":true},
+            "secondCategory": {"dataType":"string","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 };
 const validationService = new ValidationService(models);
 
@@ -61,13 +239,42 @@ export function RegisterRoutes(app: express.Router) {
     //  NOTE: If you do not see routes for all of your controllers in this file, then you might not have informed tsoa of where to look
     //      Please look into the "controllerPathGlobs" config option described in the readme: https://github.com/lukeautry/tsoa
     // ###########################################################################################################
+        app.get('/category',
+            ...(fetchMiddlewares<RequestHandler>(CategoryController)),
+            ...(fetchMiddlewares<RequestHandler>(CategoryController.prototype.getCategoryList)),
+
+            async function CategoryController_getCategoryList(request: any, response: any, next: any) {
+            const args = {
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const container: IocContainer = typeof iocContainer === 'function' ? (iocContainer as IocContainerFactory)(request) : iocContainer;
+
+                const controller: any = await container.get<CategoryController>(CategoryController);
+                if (typeof controller['setStatus'] === 'function') {
+                controller.setStatus(undefined);
+                }
+
+
+              const promise = controller.getCategoryList.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, 200, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         app.post('/category',
             ...(fetchMiddlewares<RequestHandler>(CategoryController)),
             ...(fetchMiddlewares<RequestHandler>(CategoryController.prototype.postCategory)),
 
             async function CategoryController_postCategory(request: any, response: any, next: any) {
             const args = {
-                    body: {"in":"body","name":"body","required":true,"ref":"CategoryCreateDto"},
+                    body: {"in":"body","name":"body","required":true,"ref":"CreateCategoryDto"},
                     ConflictResponse: {"in":"res","name":"409","required":true,"ref":"ErrorResponsePayload"},
             };
 
@@ -86,6 +293,37 @@ export function RegisterRoutes(app: express.Router) {
 
 
               const promise = controller.postCategory.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, 201, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.post('/category/second',
+            ...(fetchMiddlewares<RequestHandler>(CategoryController)),
+            ...(fetchMiddlewares<RequestHandler>(CategoryController.prototype.postSecondCategory)),
+
+            async function CategoryController_postSecondCategory(request: any, response: any, next: any) {
+            const args = {
+                    body: {"in":"body","name":"body","required":true,"ref":"CreateSecondCategoryDto"},
+                    NotFoundResponse: {"in":"res","name":"404","required":true,"ref":"ErrorResponsePayload"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const container: IocContainer = typeof iocContainer === 'function' ? (iocContainer as IocContainerFactory)(request) : iocContainer;
+
+                const controller: any = await container.get<CategoryController>(CategoryController);
+                if (typeof controller['setStatus'] === 'function') {
+                controller.setStatus(undefined);
+                }
+
+
+              const promise = controller.postSecondCategory.apply(controller, validatedArgs as any);
               promiseHandler(controller, promise, response, 201, next);
             } catch (err) {
                 return next(err);
